@@ -56,6 +56,7 @@
  - A005934 - Highly powerful numbers: numbers with record value
  - A001597 - Perfect Powers
  - A052486 - Achilles Numbers
+ - A000010 - Euler's totient function
 
 ## v0.8.0
 
